--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"status":"with your lives! <:ayaya:680874714843185228>",
+	"status":"with your lives! :ayaya:",
 	"prefix":"*",
 	
 	"shatters":{
