--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "imagemagick": "^0.1.3",
     "node-http-ping": "^0.3.1",
