--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "request": "^2.88.2",
     "tesseract.js": "^2.0.2",
-    "tesseractocr": "^1.2.1"
+    "tesseractocr": "^1.2.1",
+    "uri-js": "^4.2.2"
   }
 }
