--- a/config.json
+++ b/config.json
@@ -45,6 +45,7 @@
 			"four":"659857747487227905"
 		},
 		"raiderRole":"Verified Raider",
+		"eventRole":"Event Raider",
 		"rusherRole":"Official Rusher",
 		"nitroRole":"Nitro Booster",
 		"erlRole":"Event Master",
