fix move to afk not lounge

--- a/config.json
+++ b/config.json
@@ -13,7 +13,8 @@
 			"two":"679161076117536790",
 			"three":"679161089555955712",
 			"four":"679161099584798733",
-			"five":"679161108170407948"
+			"five":"679161108170407948",
+			"afk":"679161208263147550"
 		},
 		"raiderRole":"Raider",
 		"nitroRole":"Nitro Booster",
@@ -35,7 +36,8 @@
 			"lounge":"635413437647683602",
 			"one":"635542462525472809",
 			"two":"635542647788011521",
-			"three":"635547598668955709"
+			"three":"635547598668955709",
+			"afk":"635551563443863583"
 		},
 		"event":{
 			"lounge":"659857838046314537",
