give donators location

--- a/config.json
+++ b/config.json
@@ -50,6 +50,7 @@
 		"eventRole":"Event Raider",
 		"rusherRole":"Official Rusher",
 		"nitroRole":"Nitro Booster",
+		"donatorRole":"Godly Key Popper / Donator",
 		"erlRole":"Event Master",
 		"arlRole":"Almost Raid Leader",
 		"rlRole":"Raid Leader",
